[package]
name = "langgraph-cli"
version.workspace = true
edition.workspace = true
description = "CLI for ReAct agent powered by langgraph"
license.workspace = true
authors.workspace = true

[lib]
name = "langgraph_cli"
path = "src/lib.rs"

[[bin]]
name = "langgraph"
path = "src/main.rs"

[features]
default = ["openai"]
# Use real OpenAI (reads OPENAI_API_BASE, OPENAI_API_KEY, OPENAI_MODEL from .env)
openai = ["langgraph/openai", "dep:dotenv", "dep:async-openai"]
# Add embeddings support for vector search
embedding = ["langgraph/lance", "langgraph/openai"]

[dependencies]
async-trait = { workspace = true }
langgraph = { path = "../langgraph", features = ["openai", "sqlite", "mcp"] }
tokio = { workspace = true }
clap = { workspace = true }
dotenv = { version = "0.15", optional = true }
async-openai = { version = "0.32", optional = true, features = ["chat-completion"] }
sqlx = { version = "0.8", features = ["sqlite"] }
chrono = { version = "0.4" }
serde_json = "1"
