[package]
name = "langgraph-cli"
version.workspace = true
edition.workspace = true
description = "CLI for ReAct agent powered by langgraph"
license.workspace = true
authors.workspace = true

[lib]
name = "langgraph_cli"
path = "src/lib.rs"

[[bin]]
name = "langgraph"
path = "src/main.rs"

[features]
# Add embeddings support for vector search (LanceDB)
embedding = ["langgraph/lance"]

[dependencies]
async-trait = { workspace = true }
langgraph = { path = "../langgraph" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
dotenv = { version = "0.15" }
async-openai = { version = "0.32", features = ["chat-completion"] }
sqlx = { version = "0.8", features = ["sqlite"] }
chrono = { version = "0.4" }
serde_json = "1"
