[package]
name = "langgraph-server"
version.workspace = true
edition.workspace = true
description = "HTTP server exposing OpenAI-compatible chat completions SSE for ReAct agent"
license.workspace = true
authors.workspace = true

[[bin]]
name = "langgraph-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
langgraph = { path = "../langgraph" }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenv = "0.15"
async-openai = { version = "0.32", features = ["chat-completion"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.0"
