[package]
name = "langgraph"
version.workspace = true
edition.workspace = true
description = "LangGraph-style minimal agents in Rust: state-in, state-out"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Persistent store with vector search via LanceDB (16-memory-design ยง5.2.1, long-term-memory-store P4)
lance = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { workspace = true }
dashmap = "6.0"

async-openai = { version = "0.32", features = ["chat-completion", "embedding"] }
dotenv = { workspace = true }
mcp_client = { git = "https://github.com/caiuschou/mcp-rust", package = "mcp_client" }
mcp_core = { git = "https://github.com/caiuschou/mcp-rust", package = "mcp_core" }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"

# Optional: LanceDB for persistent Store with vector search (feature "lance").
lancedb = { version = "0.23", optional = true }
arrow-array = { version = "56.2", optional = true }
arrow-schema = { version = "56.2", optional = true }
futures = { version = "0.3", optional = true }

# SQLite vector store (SqliteVecStore) for long-term memory with semantic search.
sqlite-vec = "0.1"

# HTTP client for web fetcher tool
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"

